@@ -1,53 +1,49 @@
 package roomescape.service;
 
 import org.springframework.stereotype.Service;
-import roomescape.Repository.ReservationRepository;
+import roomescape.repository.ReservationRepository;
 import roomescape.domain.Reservation;
+import roomescape.domain.Time;
 import roomescape.dto.ReservationCreateForm;
 import roomescape.dto.ReservationResponseForm;
 import roomescape.exception.BaseException;
+import roomescape.repository.TimeRepository;
 
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import static roomescape.exception.ExceptionMessage.NOT_EXIST_FACTOR;
-import static roomescape.exception.ExceptionMessage.NOT_EXIST_RESERVATION;
 
 @Service
 public class ReservationService {
 
     private final ReservationRepository reservationRepository;
-    private final List<Reservation> reservations = new ArrayList<>();
+    private final TimeRepository timeRepository;
 
-    public ReservationService(ReservationRepository reservationRepository) {
+    public ReservationService(ReservationRepository reservationRepository, TimeRepository timeRepository) {
         this.reservationRepository = reservationRepository;
+        this.timeRepository = timeRepository;
     }
 
-    public List<ReservationResponseForm> getAllReservations() {
-        List<Reservation> reservations = reservationRepository.findAll();
-        return reservations.stream()
-                .map(ReservationResponseForm::new)
-                .toList();
+    public List<ReservationResponseForm> getReservations() {
+        List<Reservation> allReservations = reservationRepository.findAll();
+        return allReservations.stream()
+                .map(ReservationResponseForm::from)
+                .collect(Collectors.toList());
     }
 
-    public ReservationResponseForm createReservation(ReservationCreateForm form) {
-        if (form.getName() == null || form.getDate() == null || form.getTime() == null) {
-            throw new BaseException(NOT_EXIST_FACTOR);
-        }
-        Reservation newReservation = form.toEntity();
-        Long newId = reservationRepository.save(newReservation);
-        Reservation reservation = reservationRepository.findById(newId);
+    public ReservationResponseForm getReservation(Long id) {
+        Reservation reservation = reservationRepository.findById(id);
+        return ReservationResponseForm.from(reservation);
+    }
 
-        return new ReservationResponseForm(reservation);
+    public Long createReservation(ReservationCreateForm reservationCreateForm) {
+        Time time = timeRepository.findById(reservationCreateForm.getTime());
+        return reservationRepository.create(reservationCreateForm.getName(), reservationCreateForm.getDate(), time.getId());
     }
 
     public void deleteReservation(Long id) {
-        if (!reservationRepository.existsById(id)) {
-            throw new BaseException(NOT_EXIST_RESERVATION);
-        }
-        reservationRepository.cancel(id);
+        reservationRepository.delete(id);
     }
-
 }
-
